==> vigneshuw/NiclaSenseME/nicla_basic/library/BHY2/bosch/common/common.cpp <==
#include "common.h"
#include <stdio.h>
#include <string.h>
#include <stdbool.h>
#include <stdlib.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/drivers/spi.h>
#include <zephyr/drivers/gpio.h>
#include "bosch/bhy2_parse.h"
#include "bosch/bhy2.h"
#define BHA260_SHUTTLE_ID 0x139
#define BHI260_SHUTTLE_ID 0x119
#define SPI0                                DT_NODELABEL(spi2)
#define BHI260_NODE                         DT_NODELABEL(bhi260ap)
#define GPIO_BHI260_INT                     DT_NODELABEL(bhi_int)
#define GPIO_BHI260_RESET                   DT_NODELABEL(bhi_reset)

int8_t bhy2_spi_read(uint8_t reg_addr, uint8_t *reg_data, uint32_t length, void *intf_ptr)
{
    (void)intf_ptr;
    int ret;
    
    // BHY260_CS_PIN = 0;
    // spi.write(reg_addr);
    // spi.write(NULL, (uint16_t)length, (char*)reg_data, (uint16_t)length);
    // BHY260_CS_PIN = 1;

    // Data Configuration
    // TX
    struct spi_buf tx_buf = {
        .buf = &reg_addr,
        .len = 1
    };
    struct spi_buf_set tx = {
        .buffers = &tx_buf,
        .count = 1
    };
    // RX
    struct spi_buf rx_buf = {
        .buf = reg_data,
        .len = length
    };
    struct spi_buf_set rx = {
        .buffers = &rx_buf,
        .count = 1
    };

    gpio_pin_set_dt(&BHI_CS, 1);
    // SPI write and read
    // ret = spi_transceive(spi_dev, &spi_cfg,  &tx, &rx);
    ret = spi_write(spi_dev, &spi_cfg, &tx);
    ret = spi_read(spi_dev, &spi_cfg, &rx);
    gpio_pin_set_dt(&BHI_CS, 0);

    if (ret) {
        LOG_ERR("SPI transaction failed, ret = %d\n", ret);
    }

    return BHY2_INTF_RET_SUCCESS;
}

int8_t bhy2_spi_write(uint8_t reg_addr, const uint8_t *reg_data, uint32_t length, void *intf_ptr)
{
    (void)intf_ptr;
    int ret;
    // BHY260_CS_PIN = 0;
    // spi.write(reg_addr);
    // spi.write((char*)reg_data, (uint16_t)length, NULL, 0);
    // BHY260_CS_PIN = 1;

    // Data Configuration
    // TX
    struct spi_buf tx_buf[] = {
    {
        .buf = &reg_addr,
        .len = 1
    },
    {
        /** @todo Prevent casting away of const pointers*/
        .buf = (uint8_t *) reg_data,
        .len = length
    }
    };
    struct spi_buf_set tx = {
        .buffers = tx_buf,
        .count = 2 //ARRAY_SIZE(tx_buf)
    };
    // struct spi_buf_set tx2 = {
    //     .buffers = &tx_buf[1],
    //     .count = 1
    // };

    gpio_pin_set_dt(&BHI_CS, 1);
    // SPI Write
    ret = spi_write(spi_dev, &spi_cfg, &tx);
    // ret = spi_write(spi_dev, &spi_cfg, &tx2);
    gpio_pin_set_dt(&BHI_CS, 0);

    if(ret) {
        LOG_ERR("SPI transaction failed, ret = %d\n", ret);
    }

    return BHY2_INTF_RET_SUCCESS;
}

void bhy2_delay_us(uint32_t us, void *private_data)
{
    (void)private_data;
    // wait_us(us);
    k_usleep(us);
}
