==> robcazzaro/nRF52-BHY2-Sensor-API/examples/common/common.c <==
#include "mcommon.h"
#include "nrf_delay.h"
#include "nrfx_spim.h"
#include "nrf_gpio.h"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#include "bhy2_parse.h"
#include "bhy2.h"
#define BHA260_SHUTTLE_ID 0x139
#define BHI260_SHUTTLE_ID 0x119
#define SPI_INSTANCE_ID       1

int8_t bhy2_spi_read(uint8_t reg_addr, uint8_t *reg_data, uint32_t length, void *intf_ptr)
{
    (void)intf_ptr;

    uint8_t m_tx_buf[1];
    uint8_t m_rx_buf[length + 1];
    size_t s_tx_buf = sizeof(m_tx_buf);
    size_t s_rx_buf = sizeof(m_rx_buf);

    volatile uint32_t * p_spim_event_end = (uint32_t *) nrfx_spim_end_event_get(&m_spi);

    // Initialize buffers
    memset(reg_data, 0xff, length);
    memset(m_tx_buf,     0xff, s_tx_buf);
    memset(m_rx_buf,     0xff, s_rx_buf);

    m_tx_buf[0] = reg_addr | 0x80;  // Read

    nrfx_spim_xfer_desc_t xfer_desc = NRFX_SPIM_XFER_TRX(m_tx_buf, s_tx_buf, m_rx_buf, s_rx_buf);

    int err_code = nrfx_spim_xfer(&m_spi, &xfer_desc, NRFX_SPIM_FLAG_NO_XFER_EVT_HANDLER);
    APP_ERROR_CHECK(err_code);

    if (err_code == NRF_SUCCESS)
    {
      while (*p_spim_event_end == 0)
                {};
      *p_spim_event_end = 0; 
    }
    // The driver doesn't release the ss_pin
    // So we need to do it ourselves here to tell the chip
    // that this SPI transfer is finished.
    nrf_gpio_pin_set(BSP_MEMS_CS);

    memcpy(reg_data, &m_rx_buf[1], length);  // skip past NULL first byte in the reply. Will always be 0x00

    return BHY2_INTF_RET_SUCCESS;
}

int8_t bhy2_spi_write(uint8_t reg_addr, const uint8_t *reg_data, uint32_t length, void *intf_ptr)
{
    (void)intf_ptr;

    uint8_t m_tx_buf[length];

    volatile uint32_t * p_spim_event_end = (uint32_t *) nrfx_spim_end_event_get(&m_spi);

    // Initialize buffers
    memset(m_tx_buf, 0xff, length);

    m_tx_buf[0] = reg_addr;
    memcpy(m_tx_buf + 1, reg_data, length);

    m_tx_buf[0] = reg_addr;

    nrfx_spim_xfer_desc_t xfer_desc = NRFX_SPIM_XFER_TX(m_tx_buf, length + 1);

    int err_code = nrfx_spim_xfer(&m_spi, &xfer_desc, NRFX_SPIM_FLAG_NO_XFER_EVT_HANDLER);
    APP_ERROR_CHECK(err_code);

    if (err_code == NRF_SUCCESS)
    {
      while (*p_spim_event_end == 0)
                {};
      *p_spim_event_end = 0; 
    }
    // The driver doesn't release the ss_pin
    // So we need to do it ourselves here to tell the chip
    // that this SPI transfer is finished.
    nrf_gpio_pin_set(BSP_MEMS_CS);

    return BHY2_INTF_RET_SUCCESS;
}

void bhy2_delay_us(uint32_t us, void *private_data)
{
    (void)private_data;
    nrf_delay_us(us);
}
